--- a/gb/20/2/13/n11866936.md
+++ b/gb/20/2/13/n11866936.md
@@ -1,34 +1,34 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vntxf2407/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vntxf2407/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/vntxf2407/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/vntxf2407/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vntxf2407/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vntxf2407/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>跟中医师按摩7大穴位 不喝咖啡也能提神</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/Refreshing-acupuncture-point-200213-600x400.jpg" />
 <h6>身体有七大提神穴位，帮你醒脑、消疲劳。(Shutterstock)
 </h6>
 <hr>
-<p>工作时盯着电脑一直点头、犯困，开车时越开越想睡，喝了咖啡仍然很疲倦??如有这些困扰，可善用自己的身体<a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E7%A9%B4%E4%BD%8D.md">穴位</a>帮忙<a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E6%8F%90%E7%A5%9E.md">提神</a>。</p>
-<h2><span style="color: #188638;">身体的七大<a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E6%8F%90%E7%A5%9E.md">提神</a><a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E7%A9%B4%E4%BD%8D.md">穴位</a></span></h2>
-<p>人体有上百个穴位，咏生<a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md">中医</a>诊所院长吴建东介绍，其中一些穴位有提神醒脑的作用。</p>
-<h3>一、<a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E7%99%BE%E4%BC%9A%E7%A9%B4.md">百会穴</a></h3>
-<figure id="attachment_11867272" style="width: 500px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/baihui-point-20200213.jpg"><img class=" wp-image-11867272" src="https://i.epochtimes.com/assets/uploads/2020/02/baihui-point-20200213-600x450.jpg" alt="提神穴位之一：百会穴。（吴建东提供）" width="500" b="375" /></a><figcaption class="wp-caption-text"><a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E6%8F%90%E7%A5%9E%E7%A9%B4%E4%BD%8D.md">提神穴位</a>之一：<a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E7%99%BE%E4%BC%9A%E7%A9%B4.md">百会穴</a>。（吴建东提供）</figcaption></figure>
+<p>工作时盯着电脑一直点头、犯困，开车时越开越想睡，喝了咖啡仍然很疲倦??如有这些困扰，可善用自己的身体<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A9%B4%E4%BD%8D.md#1">穴位</a>帮忙<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8F%90%E7%A5%9E.md#1">提神</a>。</p>
+<h2><span style="color: #188638;">身体的七大<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8F%90%E7%A5%9E.md#1">提神</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A9%B4%E4%BD%8D.md#1">穴位</a></span></h2>
+<p>人体有上百个穴位，咏生<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md#1">中医</a>诊所院长吴建东介绍，其中一些穴位有提神醒脑的作用。</p>
+<h3>一、<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%99%BE%E4%BC%9A%E7%A9%B4.md#1">百会穴</a></h3>
+<figure id="attachment_11867272" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/baihui-point-20200213.jpg"><img class=" wp-image-11867272" src="https://i.epochtimes.com/assets/uploads/2020/02/baihui-point-20200213-600x450.jpg" alt="提神穴位之一：百会穴。（吴建东提供）" width="500" b="375" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8F%90%E7%A5%9E%E7%A9%B4%E4%BD%8D.md#1">提神穴位</a>之一：<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%99%BE%E4%BC%9A%E7%A9%B4.md#1">百会穴</a>。（吴建东提供）</figcaption></figure>
 <p>位于头顶的正中央偏后处，为督脉上最高的穴位，也是身体阳气汇聚之处。按摩百会穴可改善头部循环，带动气血运到头部，让头部的氧气较为充足。</p>
 <h3>二、太阳穴</h3>
-<figure id="attachment_11867282" style="width: 499px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/taiyang-point-20200213.jpg"><img class=" wp-image-11867282" src="https://i.epochtimes.com/assets/uploads/2020/02/taiyang-point-20200213-600x450.jpg" alt="提神穴位之二：太阳穴。（吴建东提供）" width="499" b="374" /></a><figcaption class="wp-caption-text"><a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E6%8F%90%E7%A5%9E%E7%A9%B4%E4%BD%8D.md">提神穴位</a>之二：太阳穴。（吴建东提供）</figcaption></figure>
+<figure id="attachment_11867282" style="width: 499px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/taiyang-point-20200213.jpg"><img class=" wp-image-11867282" src="https://i.epochtimes.com/assets/uploads/2020/02/taiyang-point-20200213-600x450.jpg" alt="提神穴位之二：太阳穴。（吴建东提供）" width="499" b="374" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8F%90%E7%A5%9E%E7%A9%B4%E4%BD%8D.md#1">提神穴位</a>之二：太阳穴。（吴建东提供）</figcaption></figure>
 <p>位于前额两侧，眼睛后方的凹陷处，轻揉按压即可，不可用力过度。??按摩太阳穴可刺激大脑，从而达到提神效果。吴建东指出，脸部的穴位多少都有醒脑作用，但太阳穴效果较好。用眼过度时，也可按压太阳穴。</p>
 <h3>三、风池穴</h3>
-<figure id="attachment_11867287" style="width: 500px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/fengchi-point-20200213.jpg"><img class=" wp-image-11867287" src="https://i.epochtimes.com/assets/uploads/2020/02/fengchi-point-20200213-600x450.jpg" alt="提神穴位之三：风池穴。（吴建东提供）" width="500" b="375" /></a><figcaption class="wp-caption-text">提神穴位之三：风池穴。（吴建东提供）</figcaption></figure>
+<figure id="attachment_11867287" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/fengchi-point-20200213.jpg"><img class=" wp-image-11867287" src="https://i.epochtimes.com/assets/uploads/2020/02/fengchi-point-20200213-600x450.jpg" alt="提神穴位之三：风池穴。（吴建东提供）" width="500" b="375" /></a><figcaption class="wp-caption-text">提神穴位之三：风池穴。（吴建东提供）</figcaption></figure>
 <p>位于两耳后、靠近发际线上方的凹陷处，左右各一。风池穴可改善颈部循环，让肌肉放松，舒缓疲劳。</p>
 <h3>四、耳朵</h3>
-<p><a href="https://github.com/vntxf2407/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md">中医</a>认为“五脏六腑，十二经脉有络于耳”，意为人体脏腑的经络循环都会经过耳朵。因此直接按摩、搓揉整个耳朵，可改善循环、提振精神。</p>
+<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md#1">中医</a>认为“五脏六腑，十二经脉有络于耳”，意为人体脏腑的经络循环都会经过耳朵。因此直接按摩、搓揉整个耳朵，可改善循环、提振精神。</p>
 <h3>五、合谷穴</h3>
-<figure id="attachment_11867295" style="width: 500px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/hegu-point-20200213.jpg"><img class=" wp-image-11867295" src="https://i.epochtimes.com/assets/uploads/2020/02/hegu-point-20200213-600x450.jpg" alt="提神穴位之五：合谷穴。（吴建东提供）" width="500" b="375" /></a><figcaption class="wp-caption-text">提神穴位之五：合谷穴。（吴建东提供）</figcaption></figure>
+<figure id="attachment_11867295" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/hegu-point-20200213.jpg"><img class=" wp-image-11867295" src="https://i.epochtimes.com/assets/uploads/2020/02/hegu-point-20200213-600x450.jpg" alt="提神穴位之五：合谷穴。（吴建东提供）" width="500" b="375" /></a><figcaption class="wp-caption-text">提神穴位之五：合谷穴。（吴建东提供）</figcaption></figure>
 <p>将手掌张开，合谷穴在第一掌骨和第二掌骨之间，较偏向食指侧的凹陷处。想睡跟气不足有关，而合谷穴有补气作用。</p>
 <h3>六、十二井穴</h3>
 <p>十二经脉各有一个井穴，总称十二井穴。《黄帝内经．灵枢》将井穴喻为水之源头，是精气所出的部位，对调节脏腑、气血、经脉之气有重要的作用。按压可清热、醒脑、安神。</p>
 <p>十二井穴分别位于手指和脚指，由于平时按压脚部穴位不方便，因此按手部的穴位即可。</p>
 <p>手掌：少商穴、商阳穴、中冲穴、关冲穴、少冲穴、少泽穴。</p>
 <p>脚掌：厉兑穴、隐白穴、至阴穴、涌泉穴、足窍阴穴、大敦穴。</p>
-<figure id="attachment_11867309" style="width: 500px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/jing-point-2-20200213.jpg"><img class=" wp-image-11867309" src="https://i.epochtimes.com/assets/uploads/2020/02/jing-point-2-20200213-600x450.jpg" alt="提神穴位之六：十二经穴的手部穴位。（吴建东提供）" width="500" b="375" /></a><figcaption class="wp-caption-text">提神穴位之六：十二经穴的手部穴位。（吴建东提供）</figcaption></figure>
+<figure id="attachment_11867309" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/jing-point-2-20200213.jpg"><img class=" wp-image-11867309" src="https://i.epochtimes.com/assets/uploads/2020/02/jing-point-2-20200213-600x450.jpg" alt="提神穴位之六：十二经穴的手部穴位。（吴建东提供）" width="500" b="375" /></a><figcaption class="wp-caption-text">提神穴位之六：十二经穴的手部穴位。（吴建东提供）</figcaption></figure>
 <p>少商穴：大拇指桡侧（即整个手部靠近拇指一侧），距指甲角2公釐。</p>
 <p>商阳穴：食指桡侧，距指甲角约2公釐。</p>
 <p>中冲穴：中指指尖中央。</p>
@@ -36,7 +36,7 @@
 <p>少冲穴：小指桡侧，距指甲角约2公釐。</p>
 <p>少泽穴：小指尺侧，距指甲角约2公釐。</p>
 <h3>七、足三里穴</h3>
-<figure id="attachment_11867312" style="width: 501px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/zusanli-point-20200213.jpg"><img class=" wp-image-11867312" src="https://i.epochtimes.com/assets/uploads/2020/02/zusanli-point-20200213-600x450.jpg" alt="提神穴位之七：足三里穴。（吴建东提供）" width="501" b="376" /></a><figcaption class="wp-caption-text">提神穴位之七：足三里穴。（吴建东提供）</figcaption></figure>
+<figure id="attachment_11867312" style="width: 501px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/zusanli-point-20200213.jpg"><img class=" wp-image-11867312" src="https://i.epochtimes.com/assets/uploads/2020/02/zusanli-point-20200213-600x450.jpg" alt="提神穴位之七：足三里穴。（吴建东提供）" width="501" b="376" /></a><figcaption class="wp-caption-text">提神穴位之七：足三里穴。（吴建东提供）</figcaption></figure>
 <p>位于小腿上，当腿弯曲时，膝关节外侧有一凹陷处，沿着凹陷处直下四横指处便是足三里穴。足三里穴主要功能是调整脾胃，也可补肠胃之气，疲劳时，按此穴可发挥补气作用。</p>
 <h2><span style="color: #188638;">提神穴位的按压时机</span></h2>
 <p>如果只是一般劳累、压力较大，而非身体虚弱者，按太阳穴、百会穴、风池穴较适合。</p>
@@ -51,46 +51,62 @@
 <p>让眼部循环变好，使眼睛更明亮。</p>
 <p><strong>3. 叩齿</strong></p>
 <p>上下排牙齿作叩击运动，让血管受震动，有助于促进头部气血循环。</p>
-<p>浏览<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/vntxf2407/djy/blob/master/gb/nsc1002.md" target="_blank" rel="noopener noreferrer">大纪元健康1+1频道</a></span></span>，了解更多健康知识！</p>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/vntxf2407/djy/blob/master/gb/19/12/20/n11734737.md" target="_blank" rel="noopener noreferrer">不用再依赖咖啡和糖 9种精油迅速提神消疲劳</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/vntxf2407/djy/blob/master/gb/19/2/6/n11028633.md" target="_blank" rel="noopener noreferrer">B群能消疲劳？晚上不能吃？维生素B真相大解析</a></span></h3>
-<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/vntxf2407/djy/blob/master/gb/14/12/17/n4320762.md" target="_blank" rel="noopener noreferrer">6大穴位 紧急时刻能解你的痛</a></span></h3>
-<p>责任编辑：李清风</p>
+<p>浏览<span style="text-decoration: underline;"><span style="color: #188638; text-decoration: underline;"><a style="color: #188638; text-decoration: underline;" href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">大纪元健康1+1频道</a></span></span>，了解更多健康知识！</p>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/tjvrql262/djy/blob/master/gb/19/12/20/n11734737.md#1" target="_blank" rel="noopener noreferrer">不用再依赖咖啡和糖 9种精油迅速提神消疲劳</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/tjvrql262/djy/blob/master/gb/19/2/6/n11028633.md#1" target="_blank" rel="noopener noreferrer">B群能消疲劳？晚上不能吃？维生素B真相大解析</a></span></h3>
+<h3><span style="color: #188638;">·?<a style="color: #188638;" href="https://github.com/tjvrql262/djy/blob/master/gb/14/12/17/n4320762.md#1" target="_blank" rel="noopener noreferrer">6大穴位 紧急时刻能解你的痛</a></span></h3>
+<p>责任编辑：李清风◇</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/13/n11866936.htm">跟中医师按摩7大穴位 不喝咖啡也能提神</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】武汉人绝望求救 死亡数突增 官网推责</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864550.htm">武汉市长不甘当替罪羊“汉网”挑战北京？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/13/n11865112.htm">湖北官场大清洗 省委书记武汉书记换人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864235.htm">【新闻看点】疫情肆虐1.6亿人复工 习在赌博？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853863.htm">《推背图》第56象解译武汉肺炎和解救之道</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11859188.htm">【历史上的瘟疫】明末瘟疫剑指大明不染清军</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/4/n11843021.htm">武汉瘟疫治寻根  历史天象醒今人（上）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851416.htm">【命理】东汉名将邓禹为13儿看相 个个应验</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860064.htm">【十字路口】业界爆料：中共要赶制百万尸袋</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11859798.htm">冠状病毒调查关键人 在非洲离奇死亡</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861792.htm">【新闻看点】西陆网发文剑指石正丽 背后诡异</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860064.htm">【十字路口】业界爆料：中共要赶制百万尸袋</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860089.htm">【拍案惊奇】中共洗脑新招：AI技术识别情绪</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861792.htm">【新闻看点】西陆网发文剑指石正丽 背后诡异</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/10/n11859214.htm">杜汶泽订2万口罩到货 先派给一线医护人员</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860801.htm">TWICE九人唱《FS》 Mina登推特趋势榜冠军</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11863408.htm">子瑜在后台也美得像人偶 TWICE成员围着拍照</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864426.htm">向贾跃亭索40亿离婚费登热搜 甘薇吁关注疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861871.htm">卢宛茵用棉口罩裹保鲜膜防疫 郑敬基直呼心酸</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/12/n11864042.md#1">重内在防疫 名医教你做3个改变 对抗新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/26/n11823977.md#1">医师：这些精油改善情绪  调节自律神经</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/6/n11773142.md#1">糖让你体内发炎、免疫下降！简单4招成功戒糖</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/4/n11768037.md#1">睡不好是血液不足？日名医传授方法助你好眠</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/12/12/n11718409.md#1">喝对茶才养生 绿茶等6大类 哪种最适合你？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/8/n11642980.md#1">天冷嗜睡怎么办？营养师荐5种提神营养素和好菌</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/vntxf2407/djy/blob/master/gb/20/2/13/n11866936.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vntxf2407/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vntxf2407/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vntxf2407/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vntxf2407/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vntxf2407/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11290434.md#1" target="_blank">【征文】爱德华：金门战役共军惨败之迷</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/2/n10610921.md#1" target="_blank">8岁自闭儿奇迹“开心锁” 变身最快乐男孩</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">【最新疫情3.16】旧金山地区700万人居家防疫</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943647.md#1">10种咖啡新伴侣 咖啡美味升级又健康</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943886.md#1">苹果经济适用房资金启动 谷歌为新园区再下一城</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940091.md#1">乌克兰猫咪计程车 猫咪陪坐让乘客不想下车</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940160.md#1">狗狗思念过世主人暴瘦 破例让它见最后一面</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940204.md#1">6个月大宝宝开二次心臓手术 第一次展开灿烂微笑</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/13/n11866936.htm">跟中医师按摩7大穴位 不喝咖啡也能提神</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/13/n11866936.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
